# XCSoar

./: meson.build
src/Airspace/: meson.build
src/Android/: meson.build
src/Atmosphere/: meson.build
src/Audio/: meson.build
src/Blackboard/: meson.build
src/Cloud/: meson.build
src/Computer/: meson.build
src/Computer/ConditionMonitor/: meson.build
src/Computer/Wind/: meson.build
