project('XCSoar',
    ['c', 'cpp'],
    version: '7.0_preview12',
    meson_version: '>= 0.47.2',
    default_options: [
        'c_std=c99',
        'cpp_std=c++14'
    ],
    license: 'GPL-2.0'
)

compiler = meson.get_compiler('cpp')
c_compiler = meson.get_compiler('c')

common_cppflags = [
  '-D_GNU_SOURCE',
]

common_cflags = [
]

common_cxxflags = [
]

add_global_arguments(common_cppflags, language: 'c')
add_global_arguments(common_cppflags, language: 'cpp')

conf = configuration_data()
conf.set_quoted('PACKAGE', meson.project_name())
conf.set_quoted('PACKAGE_NAME', meson.project_name())
conf.set_quoted('PACKAGE_VERSION', meson.project_version())
conf.set_quoted('VERSION', meson.project_version())

is_linux = host_machine.system() == 'linux'
is_darwin = host_machine.system() == 'darwin'
is_windows = host_machine.system() == 'windows'
is_android = false #get_option('android_ndk') != ''

if is_windows
  subdir('win32')
endif

if is_android
  subdir('android')
endif

sources = [
    'src/LibCXX.cpp',
    'src/Compatibility/fmode.c'
]

subdir('src/Apple')
subdir('src/IGC')
subdir('src/MapWindow')
subdir('src/MapWindow/Items')
subdir('src/Operation')
subdir('src/Polar')
subdir('src/Repository')
subdir('src/Renderer')
subdir('src/Form')
subdir('src/Form/DataField')
subdir('src/Monitor')
subdir('src/Hardware')
subdir('src/Net')
subdir('src/Net/HTTP')
subdir('src/NMEA')
subdir('src/Logger')
subdir('src/Widget')
subdir('src/Markers')
subdir('src/Util')
subdir('src/TeamCode')
subdir('src/Config')
subdir('src/Input')
subdir('src/zzip')
subdir('src/IO')
subdir('src/IO/Async')
subdir('src/Geo')
subdir('src/Geo/Flat')
subdir('src/Geo/ConvexHull')
subdir('src/Geo/Boost')
subdir('src/Geo/Memento')
subdir('src/Rough')
subdir('src/Java')
subdir('src/Language')
subdir('src/CrossSection')
subdir('src/Math')
subdir('src/Math/Boost')
subdir('src/Lua')
subdir('src/XML')
subdir('src/Time')
subdir('src/Units')
subdir('src/unix')
subdir('src/Atmosphere')
subdir('src/Formatter')
subdir('src/Audio')
subdir('src/Audio/SLES')
subdir('src/JSON')
subdir('src/Profile')
subdir('src/Screen')
subdir('src/Screen/Apple')
subdir('src/Screen/TTY')
subdir('src/Screen/Memory')
subdir('src/Screen/FreeType')
subdir('src/Screen/FB')
subdir('src/Screen/Wayland')
subdir('src/Screen/GDI')
subdir('src/Screen/EGL')
subdir('src/Screen/SDL')
subdir('src/Screen/Android')
subdir('src/Screen/X11')
subdir('src/Screen/Custom')
subdir('src/Screen/GLX')
subdir('src/Screen/OpenGL')
subdir('src/Android')
subdir('src/Cloud')
subdir('src/Menu')
subdir('src/Gauge')
subdir('src/Task')
subdir('src/Terrain')
subdir('src/Terrain/jasper')
subdir('src/Terrain/jasper/jp2')
subdir('src/Terrain/jasper/base')
subdir('src/Terrain/jasper/jpc')
subdir('src/Job')
subdir('src/InfoBoxes')
subdir('src/InfoBoxes/Panel')
subdir('src/InfoBoxes/Content')
subdir('src/Plane')
subdir('src/Dialogs')
subdir('src/Dialogs/Traffic')
subdir('src/Dialogs/Settings')
subdir('src/Dialogs/Settings/Panels')
subdir('src/Dialogs/Task')
subdir('src/Dialogs/Task/Manager')
subdir('src/Dialogs/Task/Widgets')
subdir('src/Dialogs/Plane')
subdir('src/Dialogs/Tracking')
subdir('src/Dialogs/Device')
subdir('src/Dialogs/Device/Vega')
subdir('src/Dialogs/Device/LX')
subdir('src/Dialogs/Device/CAI302')
subdir('src/Dialogs/Device/BlueFly')
subdir('src/Dialogs/Device/FLARM')
subdir('src/Dialogs/Waypoint')
subdir('src/Dialogs/Weather')
subdir('src/Dialogs/Airspace')
subdir('src/Dialogs/StatusPanels')
subdir('src/UIUtil')
subdir('src/Tracking')
subdir('src/Tracking/LiveTrack24')
subdir('src/Tracking/SkyLines')
subdir('src/Device')
subdir('src/Device/Util')
subdir('src/Device/Driver')
subdir('src/Device/Driver/Vega')
subdir('src/Device/Driver/LX')
subdir('src/Device/Driver/IMI')
subdir('src/Device/Driver/IMI/Protocol')
subdir('src/Device/Driver/CAI302')
subdir('src/Device/Driver/ThermalExpress')
subdir('src/Device/Driver/Volkslogger')
subdir('src/Device/Driver/BlueFly')
subdir('src/Device/Driver/Flytec')
subdir('src/Device/Driver/FLARM')
subdir('src/Device/Driver/XCTracer')
subdir('src/Device/Port')
subdir('src/OS')
subdir('src/Waypoint')
subdir('src/Weather')
subdir('src/Weather/PCMet')
subdir('src/Weather/Rasp')
subdir('src/Airspace')
subdir('src/Replay')
subdir('src/Computer')
subdir('src/Computer/Wind')
subdir('src/Computer/ConditionMonitor')
subdir('src/FLARM')
subdir('src/Topography')
subdir('src/Topography/shapelib')
subdir('src/Engine')
subdir('src/Engine/Trace')
subdir('src/Engine/Route')
subdir('src/Engine/Util')
subdir('src/Engine/Navigation')
subdir('src/Engine/ThermalBand')
subdir('src/Engine/PathSolvers')
subdir('src/Engine/GlideSolvers')
subdir('src/Engine/Task')
subdir('src/Engine/Task/Visitors')
subdir('src/Engine/Task/Unordered')
subdir('src/Engine/Task/Solvers')
subdir('src/Engine/Task/PathSolvers')
subdir('src/Engine/Task/Shapes')
subdir('src/Engine/Task/Points')
subdir('src/Engine/Task/Computer')
subdir('src/Engine/Task/ObservationZones')
subdir('src/Engine/Task/Factory')
subdir('src/Engine/Task/Stats')
subdir('src/Engine/Task/Ordered')
subdir('src/Engine/Task/Ordered/Points')
subdir('src/Engine/Waypoint')
subdir('src/Engine/Airspace')
subdir('src/Engine/Airspace/Predicate')
subdir('src/Engine/Contest')
subdir('src/Engine/Contest/Solvers')
subdir('src/Thread')
subdir('src/Event')
subdir('src/Event/Shared')
subdir('src/Event/SDL')
subdir('src/Event/Android')
subdir('src/Event/Windows')
subdir('src/Event/Poll')
subdir('src/Event/Poll/LibInput')
subdir('src/Event/Poll/Linux')
subdir('src/Kobo')
subdir('src/Blackboard')
subdir('src/Look')
subdir('src/Projection')
