Airspace = static_library('airspace',
    'ActivePredicate.cpp',
    'AirspaceComputerSettings.cpp',
    'AirspaceGlue.cpp',
    'AirspaceParser.cpp',
    'AirspaceVisibility.cpp',
    'NearestAirspace.cpp',
    'ProtectedAirspaceWarningManager.cpp',
    include_directories: inc,
    build_by_default: true
)
