#TODO port andriod.mk to meson
Android = static_library('android',
    'Vibrator.cpp',
    'Environment.cpp',
    'NunchuckDevice.cpp',
    'Bitmap.cpp',
    'NativeNunchuckListener.cpp',
    'Context.cpp',
    'NativeI2CbaroListener.cpp',
    'I2CbaroDevice.cpp',
    'Assert.cpp',
    'NativeInputListener.cpp',
    'NativePortListener.cpp',
    'NativeLeScanCallback.cpp',
    'EventBridge.cpp',
    'BMP085Device.cpp',
    'InternalSensors.cpp',
    'SoundUtil.cpp',
    'Nook.cpp',
    'Battery.cpp',
    'NativeView.cpp',
    'IOIOHelper.cpp',
    'NativeBMP085Listener.cpp',
    'TextUtil.cpp',
    'BluetoothHelper.cpp',
    'PortBridge.cpp',
    'DownloadManager.cpp',
    'Product.cpp',
    'Main.cpp',
    'NativeVoltageListener.cpp',
    'VoltageDevice.cpp',
    include_directories: inc,
    build_by_default: false,
)
