Audio = static_library('audio',
    'ALSAEnv.cpp',
    'ALSAPCMPlayer.cpp',
    'AndroidPCMPlayer.cpp',
    'GlobalPCMMixer.cpp',
    'GlobalPCMResourcePlayer.cpp',
    'GlobalVolumeController.cpp',
    'MixerPCMPlayer.cpp',
    'PCMBufferDataSource.cpp',
    'PCMMixer.cpp',
    'PCMMixerDataSource.cpp',
    'PCMPlayer.cpp',
    'PCMResourcePlayer.cpp',
    'SDLPCMPlayer.cpp',
    'Settings.cpp',
    'Sound.cpp',
    'ToneSynthesiser.cpp',
    'VarioGlue.cpp',
    'VarioSettings.cpp',
    'VarioSynthesiser.cpp',
    'VolumeController.cpp',
    'SLES/Init.cpp',
    include_directories: inc,
    build_by_default: true
)
