Blackboard = static_library('blackboard',
    'ProxyBlackboardListener.cpp',
    'ScopeGPSListener.cpp',
    'RateLimitedBlackboardListener.cpp',
    'LiveBlackboard.cpp',
    'BlackboardListener.cpp',
    'DeviceBlackboard.cpp',
    'ScopeCalculatedListener.cpp',
    'InterfaceBlackboard.cpp',
    include_directories: inc,
    build_by_default: true
)
