subdir('ConditionMonitor')
subdir('Wind')

Computer = static_library('computer',
    'AutoQNH.cpp',
    'AverageVarioComputer.cpp',
    'BasicComputer.cpp',
    'CirclingComputer.cpp',
    'ClimbAverageCalculator.cpp',
    'ContestComputer.cpp',
    'CuComputer.cpp',
    'Events.cpp',
    'FlyingComputer.cpp',
    'GlideComputer.cpp',
    'GlideComputerAirData.cpp',
    'GlideComputerBlackboard.cpp',
    'GlideComputerInterface.cpp',
    'GlideRatioCalculator.cpp',
    'GlideRatioComputer.cpp',
    'GroundSpeedComputer.cpp',
    'LiftDatabaseComputer.cpp',
    'LogComputer.cpp',
    'RouteComputer.cpp',
    'Settings.cpp',
    'StatsComputer.cpp',
    'TaskComputer.cpp',
    'ThermalBandComputer.cpp',
    'ThermalBase.cpp',
    'ThermalLocator.cpp',
    'TraceComputer.cpp',
    'WarningComputer.cpp',
    'WaveComputer.cpp',
    link_with: [Wind, ConditionMonitor],
    include_directories: inc,
    build_by_default: true
)
