ConditionMonitor = static_library('condition_monitor',
    'ConditionMonitorLandableReachable.cpp',
    'ConditionMonitorGlideTerrain.cpp',
    'ConditionMonitor.cpp',
    'ConditionMonitorAATTime.cpp',
    'ConditionMonitorWind.cpp',
    'ConditionMonitorSunset.cpp',
    'ConditionMonitors.cpp',
    'ConditionMonitorFinalGlide.cpp',
    include_directories: inc,
    build_by_default: true
)
